# OpenGL

./: CMakeLists.txt  README.md
Demo/CMake-demo/: CMakeLists.txt  README.md  main.cpp
Demo/CMake-demo/builds/: CMakeCache.txt  Makefile  cmake_install.cmake
Demo/Makefile-demo/: Makefile  README.md  glad.c  glad.h
builds/: CMakeCache.txt  Makefile  cmake_install.cmake  triangle
src/: glad.c  quad.cpp  triangle.cpp
